# disruptive-cli

./: CHANGELOG.md  Makefile  README.md  main.py  mypy.ini  requirements.txt  setup.cfg
.github/workflows/: build-and-deploy.yaml  build_and_deploy.yaml  deploy_pypi.yaml  test-and-lint.yaml  test_and_lint.yaml
completion/: dt-completion.bash
dtcli/: __init__.py  auth.py  cli.py  config.py  format.py  get.py  output.py  parser.py  stream.py  table.py
dtcli/args/: __init__.py  claim.py  data_connector.py  dataconnector.py  device.py  emulator.py  organization.py  project.py  service_account.py  serviceaccount.py
dtcli/arguments/: __init__.py  config.py  dataconnector.py  device.py  emulator.py  event.py  organization.py  role.py  serviceaccount.py
dtcli/commands/: __init__.py  claim.py  config.py  create.py  data_connector.py  dataconnector.py  delete.py  device.py  device_label.py  emulator.py  event.py  get.py  organization.py  project.py  project_member.py  role.py  service_account.py  serviceaccount.py  stream.py
dtcli/resources/: __init__.py  claim.py  config.py  data_connector.py  dataconnector.py  device.py  emulator.py  event.py  history.py  organization.py  project.py  role.py  service_account.py  serviceaccount.py  stream.py
tests/: api_responses.py  conftest.py  framework.py  test_claim.py  test_dataconnector.py  test_device.py  test_emulator.py  test_event.py  test_format.py  test_organization.py  test_project.py  test_role.py  test_serviceaccount.py
