[metadata]
name = dt-cli
version = attr: dtcli.__VERSION__

[options]
install_requires =
    disruptive >= 1.3.5
    pyyaml >= 6.0
    types-pyyaml >= 6.0
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    dt = dtcli.cli:entry_point

[options.extras_require]
dev =
    pytest >= 7.1.0
    pytest-mock >= 3.7.0
    mypy >= 0.9
    flake8 >= 4.0.0
    build >= 0.7.0
    setuptools >= 62.1.0
    wheel >= 0.37.0
    twine >= 4.0.0
