[metadata]
name = disruptive-cli
version = attr: dtcli.__VERSION__
description = Disruptive Technologies CLI.
long_description_content_type = text/markdown
long_description = file: README.md
author = Johannes H. Gjeraker
author_email = johannes.holm.gjeraker@disruptive-technologies.com
url = https://github.com/jhgjeraker/disruptive-cli
project_urls =
    Developers Page=https://developer.disruptive-technologies.com/docs/
keywords =
    disruptive
    technologies
    dt
    api
    cli
license_file = LICENSE
classifiers = 
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
install_requires =
    disruptive >= 1.6.0
    pyyaml >= 6.0.1
    types-pyyaml >= 6.0.0
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    dt = dtcli.cli:entry_point

[options.extras_require]
dev =
    pytest >= 7.4.0
    pytest-mock >= 3.12.0
    mypy >= 1.6.0
    flake8 >= 6.1.0
    build >= 1.0.0
    setuptools >= 68.2.0
    wheel >= 0.41.0
